# byebye

./: README.md  byebye.cabal  flake.nix
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
nix/: hix.nix  result
src/: Main.hs  result
